--- a/Legacy/src/Umbrella.Legacy.WebUtilities.DynamicImage/project.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.DynamicImage/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-rel-build00007",
+  "version": "1.0.0-rel-build00008",
   "description": "Umbrella.Legacy.WebUtilities.DynamicImage Class Library",
   "authors": [ "Richard Edwards" ],
 
@@ -12,6 +12,7 @@
     }
   },
   "dependencies": {
+    "AutoMapper": "5.0.2",
     "Microsoft.AspNet.Mvc": "5.2.3",
     "Microsoft.Owin": "3.0.1",
     "Umbrella.Legacy.WebUtilities": "1.0.0-*",
