--- a/Core/Umbrella.DataAccess/project.json
+++ b/Core/Umbrella.DataAccess/project.json
@@ -1,9 +1,10 @@
 {
-  "version": "1.0.0-rel-build00051",
+  "version": "1.0.0-rel-build00052",
   "description": "Umbrella.DataAccess Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
-    "net46": { }
+    "net46": {
+    }
   },
   "dependencies": {
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
