--- a/Core/src/Umbrella.WebUtilities/project.json
+++ b/Core/src/Umbrella.WebUtilities/project.json
@@ -1,13 +1,17 @@
 {
-  "version": "1.0.0-rel-build00056",
+  "version": "1.0.0-rel-build00057",
   "description": "Umbrella.WebUtilities Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
     "net46": {
       "frameworkAssemblies": {
-        "System.Configuration": "4.0.0.0",
-        "System.ServiceModel": "4.0.0.0",
         "System.Xml": "4.0.0.0"
+      }
+    },
+    "netstandard1.6": {
+      "dependencies": {
+        "NETStandard.Library": "1.6.0",
+        "System.Xml.XmlSerializer": "4.0.11"
       }
     }
   },
