--- a/Legacy/src/Umbrella.Legacy.WCF/project.json
+++ b/Legacy/src/Umbrella.Legacy.WCF/project.json
@@ -1,15 +1,12 @@
 ﻿{
   "version": "1.0.0-rel-build00057",
-  "description": "Umbrella.Utilities Class Library",
+  "description": "Umbrella.Legacy.WCF Class Library",
   "authors": [ "Richard Edwards" ],
   "dependencies": {
+    "Umbrella.WebUtilities": "1.0.0-*"
   },
-
   "frameworks": {
     "net46": {
-      "frameworkAssemblies": {
-        "System.Drawing": "4.0.0.0"
-      }
     }
   }
 }
