--- a/Core/src/Umbrella.DataAnnotations/project.json
+++ b/Core/src/Umbrella.DataAnnotations/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rel-build00072",
+  "version": "1.0.0-rel-build00073",
   "description": "Umbrella.DataAnnotations Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
@@ -8,5 +8,10 @@
         "System.ComponentModel.DataAnnotations": "4.0.0.0"
       }
     }
+  },
+  "buildOptions": {
+    "embed": [
+      "ClientScripts/*.js"
+    ]
   }
 }
