--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ BenchmarkDotNet.Artifacts
 /Test/Umbrella.DynamicImage.SoundInTheory.Test/Output
 /Test/Umbrella.DynamicImage.Impl.Test/Output
 /coverage
+/git-mv-with-history.sh
