--- a/N2CMS/src/Umbrella.N2/Umbrella.N2.csproj
+++ b/N2CMS/src/Umbrella.N2/Umbrella.N2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net47</TargetFramework>
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="N2CMS" Version="2.9.6.19" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
