--- a/DataAccess/src/Umbrella.DataAccess.Abstractions/Umbrella.DataAccess.Abstractions.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.Abstractions/Umbrella.DataAccess.Abstractions.csproj
@@ -31,6 +31,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
   <ItemGroup>
