--- a/Core/src/Umbrella.Utilities.Integration.NewtonsoftJson/Umbrella.Utilities.Integration.NewtonsoftJson.csproj
+++ b/Core/src/Umbrella.Utilities.Integration.NewtonsoftJson/Umbrella.Utilities.Integration.NewtonsoftJson.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
@@ -16,7 +16,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.Utilities.Integration.NewtonsoftJson</PackageId>
-    <Version>2.1.0-rc-00008</Version>
+    <Version>2.1.0-rc-00009</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2018</Copyright>
