--- a/DynamicImage/src/Umbrella.DynamicImage.SoundInTheory/Umbrella.DynamicImage.SoundInTheory.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.SoundInTheory/Umbrella.DynamicImage.SoundInTheory.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>2.1.0-rc-00011</Version>
+    <Version>2.1.0-rc-00012</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2018</Copyright>
