--- a/Legacy/src/Umbrella.Legacy.WCF/Umbrella.Legacy.WCF.csproj
+++ b/Legacy/src/Umbrella.Legacy.WCF/Umbrella.Legacy.WCF.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
@@ -15,7 +15,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.Legacy.WCF</PackageId>
-    <Version>2.1.0-rc-00011</Version>
+    <Version>2.1.0-rc-00012</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2018</Copyright>
