--- a/Samples/Umbrella.AspNet.Samples/Umbrella.AspNet.Samples.csproj
+++ b/Samples/Umbrella.AspNet.Samples/Umbrella.AspNet.Samples.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
