--- a/Legacy/src/Umbrella.Legacy.WebUtilities.FileSystem/Umbrella.Legacy.WebUtilities.FileSystem.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.FileSystem/Umbrella.Legacy.WebUtilities.FileSystem.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>Umbrella.Legacy.WebUtilities.FileSystem</PackageId>
-    <Version>2.4.0</Version>
+    <Version>2.5.0-preview-00001</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
