--- a/DataAccess/src/Umbrella.DataAccess.Remote/Umbrella.DataAccess.Remote.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.Remote/Umbrella.DataAccess.Remote.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.6" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
