--- a/Kentico/src/Umbrella.Kentico.Utilities/Umbrella.Kentico.Utilities.csproj
+++ b/Kentico/src/Umbrella.Kentico.Utilities/Umbrella.Kentico.Utilities.csproj
@@ -27,6 +27,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Kentico.Activities" Version="1.0.0" />
     <PackageReference Include="Kentico.Libraries" Version="10.0.35" />
     <PackageReference Include="Microsoft.Owin" Version="4.0.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
