--- a/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
@@ -15,7 +15,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.FileSystem.Disk</PackageId>
-    <Version>2.6.0-preview-00018</Version>
+    <Version>2.6.0-preview-00019</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
