--- a/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
@@ -15,7 +15,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.FileSystem.AzureStorage</PackageId>
-    <Version>2.7.0</Version>
+    <Version>2.6.0-preview-00021</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
