--- a/DynamicImage/src/Umbrella.DynamicImage.Abstractions/Umbrella.DynamicImage.Abstractions.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.Abstractions/Umbrella.DynamicImage.Abstractions.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
   
   <PropertyGroup>
-    <Version>2.6.1</Version>
+    <Version>2.7.0-preview-001</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
