--- a/DataAccess/src/Umbrella.DataAccess.MultiTenant/Umbrella.DataAccess.MultiTenant.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.MultiTenant/Umbrella.DataAccess.MultiTenant.csproj
@@ -15,7 +15,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.DataAccess.MultiTenant</PackageId>
-    <Version>2.7.0</Version>
+    <Version>2.8.0-preview-001</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
