--- a/Core/src/Umbrella.DataAnnotations/Umbrella.DataAnnotations.csproj
+++ b/Core/src/Umbrella.DataAnnotations/Umbrella.DataAnnotations.csproj
@@ -15,7 +15,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.DataAnnotations</PackageId>
-    <Version>2.8.2-preview-001</Version>
+    <Version>2.8.1</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
