--- a/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
@@ -15,7 +15,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.FileSystem.AzureStorage</PackageId>
-    <Version>2.9.2-preview-001</Version>
+    <Version>2.9.2</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
