--- a/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
+++ b/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
@@ -36,5 +36,9 @@
     </PackageReference>
     <PackageReference Include="System.Buffers" Version="4.5.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Abstractions\" />
+  </ItemGroup>
   
 </Project>
