--- a/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
+++ b/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
@@ -37,5 +37,9 @@
     </PackageReference>
     <PackageReference Include="System.Buffers" Version="4.5.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configuration\Options\" />
+  </ItemGroup>
   
 </Project>
